<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutUs" >

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="fill_parent"
	            android:layout_height="2dp"
	            android:background="#e62771" />
	        
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginTop="15dp"
	            android:gravity="center_horizontal"
	            android:text="@string/Description"
	            android:textColor="#cccccc"
	            android:textSize="20sp" />

	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="0dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginTop="5dp"
	            android:gravity="center_horizontal"
	            android:text="@string/Disclaimer"
	            android:textColor="#dddddd"
	            android:textSize="12sp" />
	        
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="150dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginBottom="-5dp"
	            android:layout_marginLeft="30dp"
	            android:layout_marginRight="30dp"
	            android:layout_marginTop="-10dp"
	            android:src="@drawable/logo" />
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/AppNameVersion"
	            android:textColor="#ffffff"
	            android:textSize="16sp" />
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginLeft="30dp"
	            android:layout_marginRight="30dp"
	            android:paddingBottom="20dp"
	            android:text="@string/Bhasha"
	            android:textColor="#888888"
	            android:textSize="12sp" />
	
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#777777" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/RateLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/Rate"
	            android:textSize="12sp" />
	
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#777777" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/MoreAppsLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/MoreApps"
	            android:textSize="12sp" />

	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="#777777" />
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/AppSupportLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/AppSupport"
	            android:textSize="12sp" />

	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="2dp"
	            android:background="#e62771" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/CloseLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/textView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="15dp"
	            android:layout_marginTop="15dp"
	            android:text="@string/Close"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
	
	</LinearLayout>

</ScrollView>